Fix width issue on IOS for popupmenu

--- a/content/css/themes/crm/sohoreset.less
+++ b/content/css/themes/crm/sohoreset.less
@@ -2,3 +2,7 @@
   height: auto !important;
   margin-bottom: 2rem;
 }
+
+.actions-row {
+  min-width: 125px;
+}
